erDiagram

"order_items" }o--|| "orders" : "FOREIGN KEY (order_id) REFERENCES orders (order_id)"
"order_items" }o--o| "products" : "FOREIGN KEY (product_id) REFERENCES products (product_id)"
"orders" }o--o| "customers" : "FOREIGN KEY (customer_id) REFERENCES customers (customer_id)"
"orders" }o--o| "stores" : "FOREIGN KEY (store) REFERENCES stores (name)"
"products" }o--o| "brands" : "FOREIGN KEY (brand_id) REFERENCES brands (brand_id)"
"products" }o--o| "categories" : "FOREIGN KEY (category_id) REFERENCES categories (category_id)"
"staffs" }o--o| "stores" : "FOREIGN KEY (store_name) REFERENCES stores (name)"
"stocks" }o--o| "products" : "FOREIGN KEY (product_id) REFERENCES products (product_id)"
"stocks" }o--o| "stores" : "FOREIGN KEY (store_name) REFERENCES stores (name)"

"brands" {
  int brand_id PK
  varchar_255_ brand_name
}
"categories" {
  int category_id PK
  varchar_255_ category_name
}
"customers" {
  int customer_id PK
  varchar_255_ first_name
  varchar_255_ last_name
  varchar_255_ phone
  varchar_255_ email
  varchar_255_ street
  varchar_255_ city
  varchar_255_ state
  int zip_code
}
"order_items" {
  int order_id PK
  int item_id PK
  int product_id FK
  int quantity
  decimal_10_2_ list_price
  decimal_10_6_ discount
}
"orders" {
  int order_id PK
  int customer_id FK
  int order_status
  date order_date
  date required_date
  date shipped_date
  varchar_255_ store FK
  varchar_255_ staff_name
}
"products" {
  int product_id PK
  varchar_255_ product_name
  int brand_id FK
  int category_id FK
  int model_year
  decimal_10_2_ list_price
}
"staffs" {
  int staff_id PK
  varchar_255_ name
  varchar_255_ last_name
  varchar_255_ email
  varchar_255_ phone
  tinyint_1_ active
  varchar_255_ store_name FK
  varchar_255_ street
  int manager_id
}
"stocks" {
  int stock_id PK
  varchar_255_ store_name FK
  int product_id FK
  int quantity
}
"stores" {
  varchar_255_ name PK
  varchar_255_ phone
  varchar_255_ email
  varchar_255_ street
  varchar_255_ city
  varchar_255_ state
  int zip_code
}
